client/views/posts/post_index/post_index.import.less
/*****************************************************************************/
/* PostIndex: Style */
/*****************************************************************************/
#PostIndex,
#markdown {
  img {
    .img-responsive;
    .center-block;
  }
}

#PostIndex,
#markdown {
  img {
    max-height: 400px;
    width: auto;
  }
}

#PostIndex,
#markdown {
  h1 {
    .h1
  }
}

pre {
  overflow: auto;
  word-wrap: normal;
  white-space: pre;
}

